2006-09-29 Kimmo
 PATCH: [ 1567301 ] Manual: 64-bit ShellExtension installing
  Manual: Install.xml

2006-09-25 Kimmo
 PATCH: [ 1564535 ] Manual: New folder compare screenshot
  Manual: Compare_dirs.xml Quick_start.xml
  Manual/screenshots new file: foldercomp1.png
  Manual/screenshots deleted file: dircomp1.gif
 PATCH: [ 1564623 ] Manual: New screenshots for file compare
  Manual: Compare_files.xml Quick_start.xml
  Manual/screenshots new files: file_headerbar1.png filecomp1.png
   filecomp_context1.png filecomp_inlinediff1.png linediff.png
   merge_menu.png
  Manual/screenshots deleted files: File_headerbar1.gif filecomp1.gif
   filecomp_context1.gif filecomp_inlinediff.gif linediff.gif
   Merge_menu.gif

2006-09-14 Tim
 PATCH: [ 1558909 ] Manual: New <screen> layout (XSL)
  Manual/css: all.css help.css print.css

2006-09-11 Kimmo
 Bump revision to 1.2.7 for beta release
  Manual: WinMerge_help.xml

2006-09-07 Kimmo
 PATCH: [ 1553651 ] Manual: fix inproper docbook markup in Compar_dirs.xml
  Manual: Compare_dirs.xml

2006-09-06 Kimmo
 PATCH: [ 1553037 ] Manual: add new commandline switches
  Manual: Command_line.xml

2006-09-05 Tim
 PATCH: [ 1552153 ] Manual: Build with ads (XSL)
  Manual/build: build.bat build_html.bat new file: build_html_withads.xsl
  Manual/css: all.css print.css

2006-09-05 Kimmo
 PATCH: [ 1552127 ] Manual: Add info about shellextension and subfolders
  Manual: Open_paths.xml
 PATCH: [ 1552180 ] Manual: folder compare update
  Manual: Compare_dirs.xml
  Manual/screenshots new files: aborted.png foldercmp_progress.png
  Manual/screenhots removed files: Dircomp_status1.gif Dircomp_status2.gif
  Manual/build: build_html.bat build_htmlhelp.bat

2006-08-31 Kimmo
 PATCH: [ 1548888 ] Manual: Partial update for Quick start
  Manual: Quick_start.xml
  Manual/screenshots: OpenDlg1.gif
 PATCH: [ 1548909 ] Manual: What's new in 2.5 additions
  Manual: Whatsnew_2_1.xml
 PATCH: [ 1548922 ] Manual: Updates to installing
  Manual: Install.xml
